# tkstatus

./: 2  CMakeLists.txt  LICENSE  README.md  readme.md  statusbar.sh  statusbar.tk  zstatus  zstatus-send  zstatus-send.tcl  zstatus.sh  zstatus.tk
man/: zstatus.1
modules/config/: CMakeLists.txt  config.tcl  pkgIndex.tcl
modules/devices/: .devices.tk.swp  CMakeLists.txt  devices.tk  pkgIndex.tcl.in
modules/mail/: CMakeLists.txt  mail.tk  pkgIndex.tcl
modules/maildir/: CMakeLists.txt  maildir.tk  pkgIndex.tcl.in
modules/maildir/tcl/: .maildir.tk.swp  maildir.tk  pkgIndex.tcl.in
modules/metar/: CMakeLists.txt  metar.tk  metar_decode.tcl  pkgIndex.tcl  pkgIndex.tcl.in
modules/metar/tcl/: metar.tk
modules/music/: CMakeLists.txt  music.tk  pkgIndex.tcl
modules/music/src/: config.h.in  init.c  mpd.c  mpd.h
modules/musicpd/: CMakeLists.txt  musicpd.tk  pkgIndex.tcl
modules/musicpd/src/: init.c  mpd.c  mpd.h
modules/sysbsd/: CMakeLists.txt  pkgIndex.tcl
modules/sysbsd/src/: config.h.in  init.c  sysbsd.c  sysbsd.h
modules/sysinfo/: CMakeLists.txt
modules/sysinfo/src/: init.c  sysinfo.c  sysinfo.h
modules/tclmpd/: CMakeLists.txt
modules/tclmpd/src/: init.c
modules/tclsysinfo/: CMakeLists.txt
modules/tclsysinfo/src/: init.c
modules/utils/: CMakeLists.txt  pkgIndex.tcl  pkgIndex.tcl.in  utils.tcl
modules/zconf/: CMakeLists.txt  pkgIndex.tcl.in  zconf.tcl
modules/zconfig/: CMakeLists.txt  pkgIndex.tcl.in  zconfig.tcl
